--- a/Soloud/app/src/main/AndroidManifest.xml
+++ b/Soloud/app/src/main/AndroidManifest.xml
@@ -69,17 +69,17 @@
             android:name=".activities.ContestDetails"
             android:label="@string/title_activity_advertisement_details"
             android:theme="@style/AppTheme">
-            <meta-data
+            <!--<meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.ContestsActivity" />
+                android:value=".activities.ContestsActivity" />-->
         </activity>
         <activity
             android:name=".activities.HashTagsActivity"
             android:label="@string/hashTags_label"
             android:theme="@style/AppTheme">
-            <meta-data
+            <!--<meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.ContestDetails" />
+                android:value=".activities.ContestDetails" />-->
         </activity>
         <activity
             android:name=".activities.ContestsActivity"
@@ -93,9 +93,9 @@
             android:name=".activities.PostActivity"
             android:label="@string/title_post"
             android:theme="@style/AppTheme">
-            <meta-data
+            <!--<meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.HashTagsActivity" />
+                android:value=".activities.HashTagsActivity" />-->
         </activity>
         <activity android:name=".activities.UserProfileActivity" />
     </application>
