--- a/Soloud/app/src/main/AndroidManifest.xml
+++ b/Soloud/app/src/main/AndroidManifest.xml
@@ -85,9 +85,9 @@
             android:name=".activities.ContestsActivity"
             android:label="@string/title_contests"
             android:theme="@style/AppTheme">
-            <meta-data
+            <!--<meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.MainActivity" />
+                android:value=".activities.MainActivity" />-->
         </activity>
         <activity
             android:name=".activities.PostActivity"
