--- a/Soloud/app/build.gradle
+++ b/Soloud/app/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:1.10.19'
+    compile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+
 
     compile 'com.android.support:design:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
