--- a/Soloud/app/build.gradle
+++ b/Soloud/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
+    testCompile "org.robolectric:robolectric:3.3.1"
+    testCompile 'com.squareup.okhttp3:mockwebserver:3.3.0'
     compile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
 
 
