--- a/Soloud/app/build.gradle
+++ b/Soloud/app/build.gradle
@@ -40,6 +40,10 @@ dependencies {
     testCompile "org.robolectric:robolectric:3.3.1"
     testCompile 'com.squareup.okhttp3:mockwebserver:3.3.0'
     compile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+    androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestCompile 'com.android.support.test:rules:0.5'
+    androidTestCompile 'com.android.support.test.espresso:espresso-web:2.2.2'
+    androidTestCompile 'com.android.support:support-annotations:24.2.1'
 
 
     compile 'com.android.support:design:24.2.1'
