--- a/Soloud/app/build.gradle
+++ b/Soloud/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
 
     compile 'com.balysv:material-ripple:1.0.2'
 
+    //compile 'com.google.guava:guava:20.0'
     compile 'com.github.paolorotolo:appintro:4.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'jp.wasabeef:picasso-transformations:2.1.0'
