--- a/Soloud/app/build.gradle
+++ b/Soloud/app/build.gradle
@@ -53,7 +53,9 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.android.support:appcompat-v7:24.2.1'
 
-    compile 'com.google.android.gms:play-services-analytics:9.2.0'
+    compile 'com.google.android.gms:play-services-analytics:10.2.1'
+
+    compile 'com.google.android.gms:play-services-places:10.2.1'
 
     // Other Dependencies
     compile 'com.facebook.android:facebook-android-sdk:4.16.1'
