Wizard after Login in progress.

--- a/Soloud/app/src/main/AndroidManifest.xml
+++ b/Soloud/app/src/main/AndroidManifest.xml
@@ -104,6 +104,10 @@
                 android:value=".activities.HashTagsActivity" />-->
         </activity>
         <activity android:name=".activities.UserProfileActivity" />
+        <activity
+            android:name=".wizard.WizardActivity"
+            android:theme="@style/AppFullScreenTheme">
+        </activity>
     </application>
 
 </manifest>
