--- a/Soloud/app/src/main/AndroidManifest.xml
+++ b/Soloud/app/src/main/AndroidManifest.xml
@@ -88,7 +88,7 @@
                 android:value=".activities.ContestDetails" />-->
         </activity>
         <activity
-            android:name=".activities.ContestsActivity"
+            android:name=".contests.ContestsActivity"
             android:label="@string/title_contests"
             android:theme="@style/AppTheme">
             <!--<meta-data
