--- a/Soloud/app/build.gradle
+++ b/Soloud/app/build.gradle
@@ -84,6 +84,7 @@ dependencies {
     compile 'com.pnikosis:materialish-progress:1.7'
     compile 'joda-time:joda-time:2.9.6'
     compile 'com.android.support:customtabs:24.0.0'
+    compile 'com.github.nirhart:parallaxscroll:1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
