--- a/Soloud/app/build.gradle
+++ b/Soloud/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '25.0.3'
     defaultConfig {
         applicationId "com.android.soloud"
         minSdkVersion 16
@@ -44,7 +44,7 @@ dependencies {
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support.test:rules:0.5'
     androidTestCompile 'com.android.support.test.espresso:espresso-web:2.2.2'
-    androidTestCompile 'com.android.support:support-annotations:24.2.1'
+    androidTestCompile 'com.android.support:support-annotations:25.3.0'
 
 
     compile 'com.android.support:design:24.2.1'
@@ -87,6 +87,9 @@ dependencies {
     compile 'com.github.nirhart:parallaxscroll:1.0'
 
     compile 'com.github.ksoichiro:android-observablescrollview:1.5.0'
+
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
