--- a/Soloud/app/build.gradle
+++ b/Soloud/app/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support.test:rules:0.5'
     androidTestCompile 'com.android.support.test.espresso:espresso-web:2.2.2'
-    androidTestCompile 'com.android.support:support-annotations:25.3.0'
+    androidTestCompile 'com.android.support:support-annotations:25.3.1'
 
 
     compile 'com.android.support:design:24.2.1'
@@ -58,7 +58,8 @@ dependencies {
     compile 'com.google.android.gms:play-services-places:10.2.1'
 
     // Other Dependencies
-    compile 'com.facebook.android:facebook-android-sdk:4.16.1'
+    compile 'com.facebook.android:facebook-android-sdk:4.20.0'
+    compile 'com.facebook.android:facebook-places:[4,5)'
     // Audience Network SDK. Only versions 4.6.0 and above are available
     //compile 'com.facebook.android:audience-network-sdk:4.16.1'
     // Account Kit
