--- a/Soloud/app/build.gradle
+++ b/Soloud/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '25.0.3'
     defaultConfig {
         applicationId "com.android.soloud"
-        minSdkVersion 16
+        minSdkVersion 18
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -36,7 +36,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
-    testCompile 'junit:junit:4.12'
+    /*testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile "org.robolectric:robolectric:3.3.1"
     testCompile 'com.squareup.okhttp3:mockwebserver:3.3.0'
@@ -44,7 +44,7 @@ dependencies {
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support.test:rules:0.5'
     androidTestCompile 'com.android.support.test.espresso:espresso-web:2.2.2'
-    androidTestCompile 'com.android.support:support-annotations:25.3.1'
+    androidTestCompile 'com.android.support:support-annotations:25.3.1'*/
 
 
     compile 'com.android.support:design:24.2.1'
@@ -55,11 +55,11 @@ dependencies {
 
     compile 'com.google.android.gms:play-services-analytics:10.2.1'
 
-    compile 'com.google.android.gms:play-services-places:10.2.1'
+    //compile 'com.google.android.gms:play-services-places:10.2.1'
 
     // Other Dependencies
     compile 'com.facebook.android:facebook-android-sdk:4.20.0'
-    compile 'com.facebook.android:facebook-places:[4,5)'
+    //compile 'com.facebook.android:facebook-places:4'
     // Audience Network SDK. Only versions 4.6.0 and above are available
     //compile 'com.facebook.android:audience-network-sdk:4.16.1'
     // Account Kit
