Facebook Places added. Check in in progress.

--- a/Soloud/app/src/main/AndroidManifest.xml
+++ b/Soloud/app/src/main/AndroidManifest.xml
@@ -97,7 +97,7 @@
                 android:value=".activities.MainActivity" />-->
         </activity>
         <activity
-            android:name=".activities.PostActivity"
+            android:name=".userPost.PostActivity"
             android:label="@string/title_post"
             android:theme="@style/AppTheme">
             <!--<meta-data
