--- a/Soloud/app/build.gradle
+++ b/Soloud/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 25
     buildToolsVersion '25.0.3'
     defaultConfig {
         applicationId "com.android.soloud"
         minSdkVersion 18
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -35,7 +35,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:24.2.1'
+
     /*testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile "org.robolectric:robolectric:3.3.1"
@@ -46,20 +46,22 @@ dependencies {
     androidTestCompile 'com.android.support.test.espresso:espresso-web:2.2.2'
     androidTestCompile 'com.android.support:support-annotations:25.3.1'*/
 
-
+    compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.android.support:recyclerview-v7:24.2.1'
-    compile 'com.android.support:appcompat-v7:24.2.1'
 
-    compile 'com.google.android.gms:play-services-analytics:10.2.1'
+    compile 'com.google.android.gms:play-services-maps:10.2.0'
+
+    compile 'com.google.android.gms:play-services-analytics:10.2.0'
 
     //compile 'com.google.android.gms:play-services-places:10.2.1'
 
     // Other Dependencies
-    compile 'com.facebook.android:facebook-android-sdk:4.20.0'
-    //compile 'com.facebook.android:facebook-places:4'
+    //compile 'com.facebook.android:facebook-android-sdk:4.20.0'
+    compile 'com.facebook.android:facebook-login:4.28.0'
+    compile 'com.facebook.android:facebook-places:4.28.0'
     // Audience Network SDK. Only versions 4.6.0 and above are available
     //compile 'com.facebook.android:audience-network-sdk:4.16.1'
     // Account Kit
