--- a/Soloud/app/build.gradle
+++ b/Soloud/app/build.gradle
@@ -56,6 +56,8 @@ dependencies {
 
     compile 'com.google.android.gms:play-services-analytics:10.2.0'
 
+    compile 'com.google.android.gms:play-services-location:10.2.0'
+
     //compile 'com.google.android.gms:play-services-places:10.2.1'
 
     // Other Dependencies
