--- a/Soloud/app/src/main/AndroidManifest.xml
+++ b/Soloud/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:name=".activities.LoginActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/LoginStyle">
+            android:theme="@style/TransparentStatusBarStyle">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -45,10 +45,12 @@
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
             tools:replace="android:theme" />
         <activity
             android:name="com.facebook.CustomTabActivity"
+            android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -70,9 +72,11 @@
             android:exported="true" />
 
         <activity android:name=".activities.TutorialActivity"
+            android:screenOrientation="portrait"
             />
         <activity
             android:name=".activities.ContestDetails"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_advertisement_details"
             android:theme="@style/AppTheme">
             <!--<meta-data
@@ -83,6 +87,7 @@
             android:name=".activities.HashTagsActivity"
             android:label="@string/hashTags_label"
             android:theme="@style/AppTheme"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden">
             <!--<meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -91,6 +96,7 @@
         <activity
             android:name=".contests.ContestsActivity"
             android:label="@string/title_contests"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme">
             <!--<meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -99,24 +105,29 @@
         <activity
             android:name=".userPost.PostActivity"
             android:label="@string/title_post"
-            android:theme="@style/LoginStyle">
+            android:screenOrientation="portrait"
+            android:theme="@style/NoToolbarStyle">
             <!--<meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.HashTagsActivity" />-->
         </activity>
-        <activity android:name=".profile.UserProfileActivity" />
+        <activity android:name=".profile.UserProfileActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".wizard.WizardActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppFullScreenTheme">
         </activity>
 
         <activity
             android:name=".profile.ProfileActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/profileTheme">
         </activity>
 
         <activity
             android:name=".profile.ProfileTestActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/profileTheme">
         </activity>
 
