Check in screen is displayed after the hashtags screen. When moving back and forth the state is not correct - must fix.

--- a/Soloud/app/src/main/AndroidManifest.xml
+++ b/Soloud/app/src/main/AndroidManifest.xml
@@ -131,6 +131,14 @@
             android:theme="@style/profileTheme">
         </activity>
 
+        <activity
+            android:name=".facebookPlaces.CheckInActivity"
+            android:label="@string/check_in"
+            android:screenOrientation="portrait"
+            android:theme="@style/NoToolbarStyle">
+        </activity>
+
+
     </application>
 
 </manifest>
