--- a/Soloud/app/build.gradle
+++ b/Soloud/app/build.gradle
@@ -11,6 +11,10 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+
+        /*jackOptions {
+            enabled true
+        }*/
     }
     buildTypes {
         release {
@@ -18,6 +22,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    /*compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }*/
 }
 
 repositories {
@@ -52,15 +60,14 @@ dependencies {
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.android.support:recyclerview-v7:24.2.1'
 
+    // Google Play Services
     compile 'com.google.android.gms:play-services-maps:10.2.0'
-
     compile 'com.google.android.gms:play-services-analytics:10.2.0'
-
     compile 'com.google.android.gms:play-services-location:10.2.0'
 
     //compile 'com.google.android.gms:play-services-places:10.2.1'
 
-    // Other Dependencies
+    // Facebook
     //compile 'com.facebook.android:facebook-android-sdk:4.20.0'
     compile 'com.facebook.android:facebook-login:4.28.0'
     compile 'com.facebook.android:facebook-places:4.28.0'
@@ -69,32 +76,42 @@ dependencies {
     // Account Kit
     //compile 'com.facebook.android:account-kit-sdk:4.16.1'
 
-    compile 'com.balysv:material-ripple:1.0.2'
 
+    // Network
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+
+
+    // Data
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     //compile 'com.google.guava:guava:20.0'
+    compile 'joda-time:joda-time:2.9.6'
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.0.2'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+
+
+    // UI
     compile 'com.github.paolorotolo:appintro:4.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'jp.wasabeef:picasso-transformations:2.1.0'
     compile 'com.github.clans:fab:1.6.4'
-    //compile 'com.soundcloud.android:android-crop:1.0.1@aar'
     compile 'com.rengwuxian.materialedittext:library:2.1.4'
     compile 'com.github.Cutta:TagView:1.3'
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.balysv:material-ripple:1.0.2'
     compile 'com.akexorcist:RoundCornerProgressBar:2.0.3'
-    compile 'com.github.PhilJay:MPAndroidChart:v3.0.0'
     compile 'com.nispok:snackbar:2.10.2'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.pnikosis:materialish-progress:1.7'
-    compile 'joda-time:joda-time:2.9.6'
-    compile 'com.android.support:customtabs:24.0.0'
-    compile 'com.github.nirhart:parallaxscroll:1.0'
-
+    //compile 'com.soundcloud.android:android-crop:1.0.1@aar'
     compile 'com.github.ksoichiro:android-observablescrollview:1.5.0'
+    compile 'com.github.nirhart:parallaxscroll:1.0'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.0'
+    compile 'com.android.support:customtabs:24.0.0'
 
-    compile 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
