User Profile with new version of observable scroll view library (now scrolls smooth).

--- a/Soloud/app/src/main/AndroidManifest.xml
+++ b/Soloud/app/src/main/AndroidManifest.xml
@@ -137,6 +137,11 @@
             android:screenOrientation="portrait"
             android:theme="@style/NoToolbarStyle">
         </activity>
+        <activity
+            android:name=".userProfile.FlexibleSpaceWithImageWithViewPagerTabActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/profileTheme">
+        </activity>
 
 
     </application>
